[package]
name = "patchling"
version = "0.1.0"
authors = ["Alissa Rao <lymia@lymiahugs.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
dirs = "3.0"
mlua = { version = "0.5", features = ["luajit", "vendored", "send", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
