[package]
name = "patchling_cli"
version = "0.1.0"
authors = ["Alissa Rao <lymia@lymiahugs.com>"]
edition = "2018"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = "3.0.0-beta.2"
serde_json = "1.0.64"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"

patchling = { path = "../patchling" }
